# time-datepicker-core

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: config_benchmark.rs
src/: config.rs  dialog_view_type.rs  lib.rs  rstest_utils.rs  style_names.rs  utils.rs  viewed_date.rs
src/config/: date_constraints.rs  mod.rs
