[package]
name = "time-datepicker-core"
version = "0.1.1"
authors = ["Marisada Pitakthum <p.marisada@gmail.com>"]
edition = "2024"
categories = ["date-and-time"]
description = "Core library for Thai date picker using Time crate."
keywords = ["datepicker"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Marisada/time-datepicker-core"

[dependencies]
time = { version = "0.3", features = [ "macros", "parsing", "wasm-bindgen" ]}
num-traits = { version = "0.2", default-features = false }
derive_builder = { version = "0.20", default-features = false, features = [ "alloc" ] }
derive-getters = "0.5"
cfg-if = "1.0"
js-sys = "0.3"

[dev-dependencies]
rstest = "0.25"
criterion = "0.6"
mockall = "0.13"
mockall_double = "0.3"

[[bench]]
name = "config_benchmark"
path = "benches/config_benchmark.rs"
harness = false
